--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,39 @@
   --accent-color: #2196f3;
   --white-color: #ffffff;
 }
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 /* =======ELEMENTS======= */
 .accent {
   color: var(--accent-color);
 }
-/* ========HEADER======== */
+
+.title {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.167;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--heading-font-color);
+}
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
+/* ========HEADER&FOOTER======== */
 .site-nav-link {
   font-family: Roboto;
   font-weight: 500;
@@ -32,7 +60,7 @@
   color: #000000;
 }
 
-.address-contact {
+.address-contact-info {
   font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
@@ -41,11 +69,119 @@
   color: var(--primary-font-color);
 }
 
-.address-contact:hover,
-.address-contact:focus {
+.address-contact-info:hover,
+.address-contact-info:focus {
   color: var(--accent-color);
 }
 
 .address {
   font-style: normal;
+}
+
+.address-place {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  /* color: var(--white-color); */
+}
+
+/* ========HERO======== */
+.hero-title {
+  font-family: Roboto;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.364;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  /* color: var(--white-color); */
+}
+
+.modal-button {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  background-color: var(--accent-color);
+}
+
+/* ========OUR_QUALITIES======== */
+
+.qualities-name {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--heading-font-color);
+}
+
+.qualities-description {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--primary-font-color);
+}
+
+/* ======OUR_TEAM====== */
+
+.team-member-name {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.188;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--heading-font-color);
+}
+
+.team-member-position {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.188;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-font-color);
+}
+
+/* =====OUR_PROJECTS===== */
+.filter-button {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  letter-spacing: 0.03em;
+  color: var(--heading-font-color);
+}
+
+.filter-button:focus,
+.filter-button:hover {
+  color: var(--white-color);
+  background-color: var(--accent-color);
+}
+
+.project-name {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--heading-font-color);
+}
+
+.project-type {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.03em;
+  color: var(--primary-font-color);
 }
